@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Add dequeue_interval attribute and check for jobs in 0.5 second intervals
+    by default.
 
 2.003     2017-08-07 16:04:18 EDT
   - Fix tests for rethrown job exceptions in Minion 7.05.
